@@ -12,6 +12,5 @@ echo 'export HostName=000' >> ${envfile}
 cat ${envfile}
 source ${envfile}
 
-# JDK17 不识别 -XX:PermSize/-XX:MaxPermSize（JDK8 遗留参数），已移除；
-# JVM 参数放在 -jar 之前才会被当作 JVM 参数；显式用 ${JAVA_HOME}/bin/java 钉死 JDK17，exec 让 java 成为 tini 直接子进程
-exec ${JAVA_HOME}/bin/java -Xms256m -Xmx512m -Dfile.encoding="utf-8" -jar /home/ap/kjjr_ai/techfin-controller-1.0.0.RELEASE.jar
+# JVM 参数放在 -jar 之前才会被当作 JVM 参数；java 由 Dockerfile 的 PATH 指向 JDK17 bin，exec 让 java 成为 tini 直接子进程
+exec java -Xms256m -Xmx512m -Dfile.encoding="utf-8" -jar /home/ap/kjjr_ai/techfin-controller-1.0.0.RELEASE.jar
